# epd-display

./: .gitignore  .justfile  Cargo.toml  LICENSE.txt  README.md
.cargo/: config.toml
dev-tools/: Cargo.toml
dev-tools/src/: lib.rs  stack_paint.rs
display-demo/: .justfile  Cargo.toml  build.rs
display-demo/src/: main.rs
epd-display/: Cargo.toml
epd-display/src/: epd2in66b.rs  lib.rs
epd-display/src/epd/: bitmap_buffer.rs  epd_2in66b.rs  epd_spi.rs  mod.rs  three_color.rs
pico-display/: Cargo.toml
pico-display/src/: main.rs
pico-display/src/data/: display_cmd.rs  mod.rs
pico-display/src/tasks/: display.rs  mod.rs  wifi.rs
pico-wifi/: Cargo.toml
pico-wifi/src/: init.rs  lib.rs
src/: bitmap_buffer.rs  color.rs  display_demo.rs  display_orientation.rs  display_spi.rs  epd.rs  epd_2in66b.rs  lib.rs  main.rs  three_color_epd.rs
src/epd/: epd_spi.rs
wifi/: Cargo.toml
wifi-demo/: .justfile  Cargo.toml
wifi-demo/src/: display_demo.rs  main.rs
wifi-sample/: Cargo.toml  build.rs
wifi-sample/.cargo/: config.toml
wifi-sample/src/: main.rs
wifi/src/: init.rs  lib.rs
