[workspace]
resolver = "3"
members = [
    "display-demo",
    "wifi-demo",
    "epd-display"
]
default-members=[ "display-demo" ]

[workspace.dependencies]
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "defmt", "executor-interrupt", "executor-thread"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }

defmt = "1.0"
defmt-rtt = "1.0"
static_cell = "2.1"
portable-atomic = { version = "1.10", features = ["critical-section"]}

cortex-m-rt = "0.7"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-graphics = { version = "0.8", features = ["defmt"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
