[workspace]
resolver = "3"
members = [
    "pico-display",
    "display-demo",
    "wifi-demo",
    "epd-display",
    "pico-wifi",
    "dev-tools",
]
default-members=[ "pico-display" ]

[workspace.dependencies]
embassy-executor = { version = "0.9", features = ["defmt", "arch-cortex-m", "executor-interrupt", "executor-thread"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-net = { version = "0.7.1", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
embassy-rp = { version = "0.8", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = "0.7.2"

defmt = "1.0"
defmt-rtt = "1.0"
static_cell = "2.1"
portable-atomic = { version = "1.10", features = ["critical-section"]}

cortex-m-rt = "0.7"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-io-async = { version = "0.6" }

cyw43 = { version = "0.5", features = ["defmt"] }
cyw43-pio = { version = "0.8", features = ["defmt"] }

embedded-graphics = { version = "0.8", features = ["defmt"] }

dotenvy_macro = "0.15"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
