[package]
name = "epd-display"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-time = { workspace = true }
embassy-rp = { workspace = true }

embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-hal-bus = { workspace = true }
embedded-graphics = { workspace = true }

[lib]
name = "epd_display"
path = "src/lib.rs"
test = false
doctest = false
bench = false
