[package]
name = "wifi-demo"
version = "0.1.0"
edition = "2024"

[features]
default = ["rp2040"]
rp2040 = ["embassy-rp/rp2040", "dep:portable-atomic", "wifi/rp2040"]
rp2350 = ["embassy-rp/rp235xa", "embassy-rp/binary-info", "wifi/rp2350"]

[dependencies]
wifi = { path = "../wifi" }
dev-tools = { path = "../dev-tools" }
embassy-rp = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-net = { workspace = true }
embassy-sync = { workspace = true }

defmt = { workspace = true }
defmt-rtt = { workspace = true }
static_cell = { workspace = true }
portable-atomic = { workspace = true, optional = true }

cortex-m-rt = { workspace = true }
panic-probe = { workspace = true }

embedded-io-async = { workspace = true }

cyw43 = { workspace = true }
cyw43-pio = { workspace = true }

dotenvy_macro = { workspace = true }

[[bin]]
name = "wifi_demo"
path = "src/main.rs"
test = false
doctest = false
bench = false
