[package]
name = "wifi-demo"
version = "0.1.0"
edition = "2024"

[features]
default = ["rp2040"]
rp2040 = ["embassy-rp/rp2040", "dep:portable-atomic", "pico-wifi/rp2040"]
rp2350 = ["embassy-rp/rp235xa", "embassy-rp/binary-info", "pico-wifi/rp2350"]

[dependencies]
pico-wifi = { path = "../pico-wifi" }
dev-tools = { path = "../dev-tools" }

embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-net = { workspace = true }
embassy-rp = { workspace = true }

cyw43-pio = { workspace = true }

cortex-m-rt = { workspace = true }
panic-probe = { workspace = true }

defmt = { workspace = true }
defmt-rtt = { workspace = true }
static_cell = { workspace = true }
portable-atomic = { workspace = true, optional = true }

dotenvy_macro = { workspace = true }
serde = { workspace = true, deafault-features = false, features = ["derive"] }
serde-json-core = { workspace = true }
heapless = { workspace = true, features = ["serde"] }

[[bin]]
name = "wifi_demo"
path = "src/main.rs"
test = false
doctest = false
bench = false
